# PolySheafNeuralNetworks-RailwayPassengers

./: .gitignore  Dockerfile  README.md  environment_cpu.yaml  environment_gpu.yaml  environment_gpu_mac.yaml  environment_mac_arm.yaml  pyproject.toml  requirements.txt
datasets/cornell/processed/: data.pt
datasets/pos_encodings/: TestData_evectors_1.pkl
datasets/synthetic_exp/processed/: data.pt
datasets/synthetic_exp/raw/: class_params.pt  edge_data.pt  synthetic_data.pt  x_data.pt  y_data.pt
datasets/texas/processed/: data.pt
datasets/tokyo_railway/: gat_sweep_inductive_normrow_seed0_sigma5.0.csv  gat_sweep_inductive_seed0_sigma5.0.csv  gat_sweep_transductive_normrow_seed0_sigma5.0.csv  gat_sweep_transductive_seed0_sigma5.0.csv  gcn_sweep_inductive_normrow_seed0_sigma5.0.csv  gcn_sweep_inductive_seed0_sigma5.0.csv  gcn_sweep_transductive_normrow_seed0_sigma5.0.csv  gcn_sweep_transductive_seed0_sigma5.0.csv  graph_plot_clean.ipynb  graph_plot_jp.ipynb  graph_plot_test.ipynb  ind_normrow.csv  pass_survey_tokyov1109.csv  tokyo.py  tra_normrow.csv  wandb_to_csv.py
datasets/tokyo_railway/processed/: data.pt
datasets/tokyo_railway/raw/: graph_passenger_survey202411.csv  line_station_connectionV1130.csv
datasets/wisconsin/processed/: data.pt
exp/: parser.py  run.py  run_polynsd_vs_nsd.py
exp/scripts/: run_amazon_ratings.sh  run_arxiv_year.sh  run_chameleon.sh  run_citeseer.sh  run_cora.sh  run_film.sh  run_ogbn_arxiv.sh  run_pubmed.sh  run_roman_empire.sh  run_snap_patents.sh  run_squirrel.sh  run_synthetic.sh  run_synthetic_noise.sh  run_texas.sh  run_tokyo.sh  run_wiki_cs.sh  run_wisconsin.sh
exp/scripts/sweeps/: amazon_ratings_sweep.yaml  arxiv_year_sweep.yaml  chameleon_sweep.yaml  citeseer_sweep.yaml  cora_sweep.yaml  cornell_sweep.yaml  film_sweep.yaml  ogbn_arxiv_sweep.yaml  pubmed_sweep.yaml  roman_empire_sweep.yaml  run_sweep.sh  run_sweep_cambridge.sh  snap_patents_sweep.yaml  squirrel_sweep.yaml  synthetic_sweep.yaml  texas_sweep.yaml  tokyo_railway_sweep.yaml  wiki_cs_sweep.yaml  wisconsin_sweep.yaml
models/: cont_models.py  disc_models.py  laplacian_builders.py  orthogonal.py  polynomial_sheaf_base.py  sheaf_base.py  sheaf_models.py
models/tests_and_experiments/baseline/: baseline.py  chebgnn_sweep.yaml
models/tests_and_experiments/city_networks_long_range/: long_range.yaml  long_range_benchmark.py
splits/: la_split_0.6_0.2_0.npz  ogbn-arxiv_split_0.6_0.2_4.npz  paris_split_0.6_0.2_0.npz  roman_empire_split_0.6_0.2_0.npz  roman_empire_split_0.6_0.2_2.npz  roman_empire_split_0.6_0.2_3.npz  roman_empire_split_0.6_0.2_5.npz  roman_empire_split_0.6_0.2_8.npz  roman_empire_split_0.6_0.2_9.npz  roman_empire_split_1.npz  roman_empire_split_4.npz  roman_empire_split_6.npz  roman_empire_split_7.npz  synthetic_exp_split_0.6_0.2_0.npz  synthetic_exp_split_0.6_0.2_1.npz  synthetic_exp_split_0.6_0.2_2.npz  synthetic_exp_split_0.6_0.2_3.npz  synthetic_exp_split_0.6_0.2_4.npz  synthetic_exp_split_0.6_0.2_5.npz  synthetic_exp_split_0.6_0.2_6.npz  synthetic_exp_split_0.6_0.2_7.npz  synthetic_exp_split_0.6_0.2_8.npz  synthetic_exp_split_0.6_0.2_9.npz  texas_split_0.6_0.2_0.npz  texas_split_0.6_0.2_1.npz  texas_split_0.6_0.2_2.npz  texas_split_0.6_0.2_3.npz  texas_split_0.6_0.2_4.npz  texas_split_0.6_0.2_5.npz  texas_split_0.6_0.2_6.npz  texas_split_0.6_0.2_7.npz  texas_split_0.6_0.2_8.npz  texas_split_0.6_0.2_9.npz  tokyo_railway_split_0.6_0.2_0.npz  tokyo_railway_split_0.6_0.2_1.npz  tokyo_railway_split_0.6_0.2_2.npz  tokyo_railway_split_inductive.npz
utils/: classic.py  heterophilic.py  node_subsets.py  reproducibility.py  resource_analysis.py  visualize_restriction_maps.py
visualizations/: dirichlet.py  make_K_vs_testacc.py  make_amountofdata_figure.py  make_example.py  make_heterophily_figure.py  make_noise_figure.py  make_stalkdim_vs_testacc_plot.py  oversquashing.py  plot_spectral_response.py  spectral_band_ablation.py
visualizations/csv_files/AmountData/: Data_ChebyDiff.csv  Data_ChebyRiSNN.csv  Data_Diff.csv  Data_RiSNN.csv
visualizations/csv_files/Heterophily/: Het_ChebyDiff.csv  Het_ChebyRiSNN.csv  Het_Diff.csv  Het_RiSNN.csv
visualizations/csv_files/K_vs_Accuracy/: K_vs_TestAcc.csv
visualizations/csv_files/Noise/: Noise_ChebyDiff.csv  Noise_ChebyRiSNN.csv  Noise_Diff.csv  Noise_RiSNN.csv
visualizations/csv_files/StalkDim_VS_Accuracy/: Stalk_Dimension_VS_Test_Accuracy.csv
